--- a/raster_tuning.cbp
+++ b/raster_tuning.cbp
@@ -13,7 +13,7 @@
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
-				<Option parameters="-ng -dt 0.01" />
+				<Option parameters="-ng -mat -  -seed 0 -t 10000 -n 20" />
 				<Compiler>
 					<Add option="-pedantic" />
 					<Add option="-g" />
