--- a/raster_tuning.cbp
+++ b/raster_tuning.cbp
@@ -13,7 +13,7 @@
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
-				<Option parameters="-ng -mat -  -seed 0 -t 10000 -n 20" />
+				<Option parameters="-ng -t 10000 -seed 0 -n 2 -pr 1 -ps 0.012 --RC-filter 0.0 1.0" />
 				<Compiler>
 					<Add option="-pedantic" />
 					<Add option="-g" />
