delete global var "extern char g_staffsave_path[];" delete header "#include <time.h>" "#include <assert.h>" make setglobals() and readinput() to return it's status. add size to ReadPR() and Str2Arr() Fix several bug about file handling. Fix a bug about cmd line --pr-mul --ps-mul --psi-mul Rearranged the raster_tuning.cpp, so we need another test
--HG--
branch : IFsimu

--- a/raster_tuning.cbp
+++ b/raster_tuning.cbp
@@ -13,7 +13,7 @@
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
-				<Option parameters="-ng -t 10000 -seed 0 -n 2 -pr 1 -ps 0.012 --psi-mul" />
+				<Option parameters=' -ng -t 10000 -seed 0 --bin-save -n 2 -pr 1 -ps 0.012 -inf &quot;/etc/network/interfaces&quot;' />
 				<Compiler>
 					<Add option="-pedantic" />
 					<Add option="-g" />
