--- a/raster_tuning.cbp
+++ b/raster_tuning.cbp
@@ -35,11 +35,9 @@
 				<Option parameters="-ng -n 3 -t 1000000 -inf test2_test.txt -mat - -seed 0" />
 				<Compiler>
 					<Add option="-O2" />
-					<Add option="-pg" />
-					<Add option="-g" />
 				</Compiler>
 				<Linker>
-					<Add option="-pg" />
+					<Add option="-s" />
 					<Add library="GL" />
 					<Add library="GLU" />
 					<Add library="glut" />
